force-app/main/default/objects/Case/fields/Account_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Rep__c</fullName>
    <formula>Account.Sales_Rep__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sales Rep</label>
    <type>Text</type>
</CustomField>