force-app/main/default/objects/Case/fields/Accounting_Process__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Process</label>
    <referenceTo>Accounting_Process__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>