force-app/main/default/objects/Case/fields/All_included_stated__c.field-meta.xml
<CustomField>
    <fullName>All_included_stated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Inclusive Language Used</label>
    <type>Checkbox</type>
</CustomField>