force-app/main/default/objects/Case/fields/At_Risk_Future_Revenue__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Future_Revenue__c</fullName>
    <description>The total amount of at-risk future revenue for all of the selected At-Risk Subscription line&apos;s related invoices</description>
    <inlineHelpText>The total amount of at-risk future revenue for all of the selected At-Risk Subscription line&apos;s related invoices</inlineHelpText>
    <label>At-Risk Future Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>