force-app/main/default/objects/Case/fields/At_Risk_Net_Paid_Amount_Last_180_Days__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Net_Paid_Amount_Last_180_Days__c</fullName>
    <description>The total amount of Net Paid Amount over the last 180 days for all of the selected At-Risk Subscription line&apos;s related invoices</description>
    <inlineHelpText>The total amount of Net Paid Amount over the last 180 days for all of the selected At-Risk Subscription line&apos;s related invoices</inlineHelpText>
    <label>At-Risk Net Paid Amount - Last 180 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>