force-app/main/default/objects/Case/fields/At_Risk_Subscription_Lines__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Subscription_Lines__c</fullName>
    <description>A list of Subscription Line Items identified to be at-risk.</description>
    <label>At-Risk Subscription Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1-800Accountant Access</fullName>
            </value>
            <value>
                <fullName>Business Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Loan Agreement</fullName>
            </value>
            <value>
                <fullName>Personal Tax Preparation</fullName>
            </value>
            <value>
                <fullName>Tax Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>