force-app/main/default/objects/Case/fields/Billing_Support_Rep__c.field-meta.xml
<CustomField>
    <fullName>Billing_Support_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Support Rep</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Billing_Support_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>