force-app/main/default/objects/Case/fields/Bookkeeper_Assigned_Portal__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeper_Assigned_Portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bookkeeper Assigned Portal</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>