force-app/main/default/objects/Case/fields/Bookkeeping_AP_ID__c.field-meta.xml
<CustomField>
    <fullName>Bookkeeping_AP_ID__c</fullName>
    <label>Bookkeeping AP ID</label>
    <type>Url</type>
</CustomField>