force-app/main/default/objects/Case/fields/Business_Operational__c.field-meta.xml
<CustomField>
    <fullName>Business_Operational__c</fullName>
    <inlineHelpText>Ask if the business is up and running or generating revenue</inlineHelpText>
    <label>Business Operational/Generating Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>