force-app/main/default/objects/Case/fields/Call_Recording_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording_Disclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the representative notify client that calls are recorded for quality and training purposes?</description>
    <inlineHelpText>Did the representative notify client that calls are recorded for quality and training purposes?</inlineHelpText>
    <label>Call Recording Disclosure</label>
    <type>Checkbox</type>
</CustomField>