force-app/main/default/objects/Case/fields/Cancelled_within_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_within_30_Days__c</fullName>
    <label>Cancelled within 30 Days?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>