force-app/main/default/objects/Case/fields/Case_Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Case_Days_Open__c</fullName>
    <formula>ClosedDate - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>