force-app/main/default/objects/Case/fields/Case_Owner_Accountant_Portal__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Accountant_Portal__c</fullName>
    <description>Case Owner (Accountant Portal)</description>
    <label>Case Owner (Accountant Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>