force-app/main/default/objects/Case/fields/Case_Owner_Error__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Owner Error</label>
    <type>Checkbox</type>
</CustomField>