force-app/main/default/objects/Case/fields/Case_Owner_office__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_office__c</fullName>
    <formula>TEXT(Owner:User.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner office</label>
    <type>Text</type>
</CustomField>