force-app/main/default/objects/Case/fields/Case_Owner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner (Portal)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases8</relationshipName>
    <type>Lookup</type>
</CustomField>