force-app/main/default/objects/Case/fields/Claims_True__c.field-meta.xml
<CustomField>
    <fullName>Claims_True__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Were the client&apos;s claims true?</description>
    <inlineHelpText>Were the client&apos;s claims true?</inlineHelpText>
    <label>Claims True</label>
    <type>Checkbox</type>
</CustomField>