force-app/main/default/objects/Case/fields/Client_Age_When_Case_Created__c.field-meta.xml
<CustomField>
    <fullName>Client_Age_When_Case_Created__c</fullName>
    <description>The number of days since a client&apos;s subscriptions first started at the time the case was created.</description>
    <inlineHelpText>The number of days since a client&apos;s subscriptions first started at the time the case was created.</inlineHelpText>
    <label>Client Age When Case Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>