force-app/main/default/objects/Case/fields/Client_Portal_Issue__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal_Issue__c</fullName>
    <label>Client Portal Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client portal</fullName>
            </value>
            <value>
                <fullName>VTO Access</fullName>
            </value>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>CP Access</fullName>
            </value>
            <value>
                <fullName>Cogniance ticket</fullName>
            </value>
            <value>
                <fullName>Add Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>