force-app/main/default/objects/Case/fields/Coached_Date__c.field-meta.xml
<CustomField>
    <fullName>Coached_Date__c</fullName>
    <description>Date that Sales was coached.</description>
    <inlineHelpText>Date that Sales was coached.</inlineHelpText>
    <label>Coached Date</label>
    <type>Date</type>
</CustomField>