force-app/main/default/objects/Case/fields/Connected_w_Client__c.field-meta.xml
<CustomField>
    <fullName>Connected_w_Client__c</fullName>
    <label>Connected w/Client?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>