force-app/main/default/objects/Case/fields/Corrective_Action_Recommended__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Recommended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Corrective Action Recommended</label>
    <type>Checkbox</type>
</CustomField>