force-app/main/default/objects/Case/fields/Created_By_Accountant_Portal__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Accountant_Portal__c</fullName>
    <label>Created By (Accountant Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>