force-app/main/default/objects/Case/fields/Created_By_Office__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Office__c</fullName>
    <formula>TEXT(CreatedBy.Office__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By - Office</label>
    <type>Text</type>
</CustomField>