force-app/main/default/objects/Case/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <formula>IF( ISBLANK(  Account.P2C_Customer_ID__c  ) ,  Account.Account_Autonumber__c  , Account.P2C_Customer_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>