force-app/main/default/objects/Case/fields/Customer_Number_Portal__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_Portal__c</fullName>
    <label>Customer Number (Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>