force-app/main/default/objects/Case/fields/EntityNoteID__c.field-meta.xml
<CustomField>
    <fullName>EntityNoteID__c</fullName>
    <label>Entity Note ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>