force-app/main/default/objects/Case/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <description>The type of error displayed</description>
    <inlineHelpText>What error was displayed?</inlineHelpText>
    <label>Error Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>404</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>Lead Convert Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>