force-app/main/default/objects/Case/fields/Estimate_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimate_Delivery_Date__c</fullName>
    <label>Estimate Delivery Date</label>
    <type>Date</type>
</CustomField>