force-app/main/default/objects/Case/fields/Expected_Future_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Future_Payment_Amount__c</fullName>
    <label>Expected Future Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>