force-app/main/default/objects/Case/fields/Extended_Refund_Policy__c.field-meta.xml
<CustomField>
    <fullName>Extended_Refund_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extended Refund Policy</label>
    <type>Checkbox</type>
</CustomField>