force-app/main/default/objects/Case/fields/Finicity_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Finicity_Customer_ID__c</fullName>
    <description>The client&apos;s ID for the Finicity platform</description>
    <label>Finicity Customer ID</label>
    <length>64</length>
    <type>Text</type>
</CustomField>