force-app/main/default/objects/Case/fields/Finicity_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Finicity_Error_Code__c</fullName>
    <label>Finicity Error Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>10000</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>106</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>109</fullName>
            </value>
            <value>
                <fullName>130</fullName>
            </value>
            <value>
                <fullName>169</fullName>
            </value>
            <value>
                <fullName>170</fullName>
            </value>
            <value>
                <fullName>185</fullName>
            </value>
            <value>
                <fullName>187</fullName>
            </value>
            <value>
                <fullName>324</fullName>
            </value>
            <value>
                <fullName>331</fullName>
            </value>
            <value>
                <fullName>400</fullName>
            </value>
            <value>
                <fullName>44000</fullName>
            </value>
            <value>
                <fullName>503</fullName>
            </value>
            <value>
                <fullName>525</fullName>
            </value>
            <value>
                <fullName>910</fullName>
            </value>
            <value>
                <fullName>924</fullName>
            </value>
            <value>
                <fullName>Missing Transactions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>