force-app/main/default/objects/Case/fields/Finicity_i__c.field-meta.xml
<CustomField>
    <fullName>Finicity_i__c</fullName>
    <label>Finicity Issue?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finicity - Network Issues</fullName>
            </value>
            <value>
                <fullName>Finicity - Invalid Credentials</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>