force-app/main/default/objects/Case/fields/Finicity_Status__c.field-meta.xml
<CustomField>
    <fullName>Finicity_Status__c</fullName>
    <label>Finicity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket Submitted</fullName>
            </value>
            <value>
                <fullName>Sent to Customer Service</fullName>
            </value>
            <value>
                <fullName>Ticket Submitted - update: being worked on by them</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>