force-app/main/default/objects/Case/fields/FTC_Compliance__c.field-meta.xml
<CustomField>
    <fullName>FTC_Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the representative meet all 5 FTC requirements when charging a client&apos;s payment method?</description>
    <inlineHelpText>Did the representative meet all 5 FTC requirements when charging a client&apos;s payment method?</inlineHelpText>
    <label>FTC Compliance</label>
    <type>Checkbox</type>
</CustomField>