force-app/main/default/objects/Case/fields/Fulfillment_Owner_Portal__c.field-meta.xml
<CustomField>
    <fullName>Fulfillment_Owner_Portal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fulfillment Owner (Portal)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases6</relationshipName>
    <type>Lookup</type>
</CustomField>