force-app/main/default/objects/Case/fields/How_Long_Have_They_Been_a_Client__c.field-meta.xml
<CustomField>
    <fullName>How_Long_Have_They_Been_a_Client__c</fullName>
    <label>How Long Have They Been a Client?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Days or Under</fullName>
            </value>
            <value>
                <fullName>31-90 Days</fullName>
            </value>
            <value>
                <fullName>91-345 days</fullName>
            </value>
            <value>
                <fullName>346-359 days</fullName>
            </value>
            <value>
                <fullName>360 Days and Over</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>