force-app/main/default/objects/Case/fields/Internal_case_status__c.field-meta.xml
<CustomField>
    <fullName>Internal_case_status__c</fullName>
    <label>Internal case status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>