force-app/main/default/objects/Case/fields/Lifetime_Payments__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Payments__c</fullName>
    <description>Lifetime value/total payments up until this point.</description>
    <inlineHelpText>Lifetime value/total payments up until this point.</inlineHelpText>
    <label>Lifetime Payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>