force-app/main/default/objects/Case/fields/Lifetime_Refunds__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Refunds__c</fullName>
    <description>Total of all refunds processed on this account.</description>
    <inlineHelpText>Total of all refunds processed on this account.</inlineHelpText>
    <label>Lifetime Refunds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>