force-app/main/default/objects/Case/fields/Lost_Future_Revenue_Due_to_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Lost_Future_Revenue_Due_to_Cancellation__c</fullName>
    <description>The total amount of lost future revenue (due to cancellation) for all of the selected At-Risk Subscription line&apos;s related invoices</description>
    <inlineHelpText>The total amount of lost future revenue (due to cancellation) for all of the selected At-Risk Subscription line&apos;s related invoices</inlineHelpText>
    <label>Lost Future Revenue Due to Cancellation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>