force-app/main/default/objects/Case/fields/LZ_Franchise_State__c.field-meta.xml
<CustomField>
    <fullName>LZ_Franchise_State__c</fullName>
    <label>LZ Franchise State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>