force-app/main/default/objects/Case/fields/LZ_Franchise_Status__c.field-meta.xml
<CustomField>
    <fullName>LZ_Franchise_Status__c</fullName>
    <label>LZ Franchise Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New - Not Called</fullName>
                <default>true</default>
                <label>New - Not Called</label>
            </value>
            <value>
                <fullName>New- Email Sent</fullName>
            </value>
            <value>
                <fullName>Called - Left VM</fullName>
            </value>
            <value>
                <fullName>Called - No Return Needed</fullName>
            </value>
            <value>
                <fullName>Called - Needs Return</fullName>
            </value>
            <value>
                <fullName>Return - In Process</fullName>
            </value>
            <value>
                <fullName>Return - Issues</fullName>
            </value>
            <value>
                <fullName>Return - Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>