force-app/main/default/objects/Case/fields/Manager_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Response_Date__c</fullName>
    <description>The date a sales manager commented on the case via Chatter</description>
    <inlineHelpText>The date a sales manager commented on the case via Chatter</inlineHelpText>
    <label>Manager Response Date</label>
    <type>Date</type>
</CustomField>