force-app/main/default/objects/Case/fields/Mislead_about_30_Day_MBG__c.field-meta.xml
<CustomField>
    <fullName>Mislead_about_30_Day_MBG__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>MBG = Money Back Guarantee. This can include a promise that they can be refunded at any time.</inlineHelpText>
    <label>Mislead about 30 Day MBG</label>
    <type>Checkbox</type>
</CustomField>