force-app/main/default/objects/Case/fields/Mitel_Team__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Team__c</fullName>
    <formula>Account.PortalAccountOwner__r.Mitel_Team__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Eastern #1 - @EST1
Eastern #2 - @EST2
Eastern #3 - @EST3
Central - @CST
Pacific #1 - @PST1
Pacific #2 - @PST2
Payroll/Bookkeeping - @CAS Management</inlineHelpText>
    <label>Mitel Team</label>
    <type>Text</type>
</CustomField>