force-app/main/default/objects/Case/fields/Needs_P2C_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Needs_P2C_Lookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs P2C Lookup</label>
    <type>Checkbox</type>
</CustomField>