force-app/main/default/objects/Case/fields/Net_Payments_Last_180_Days__c.field-meta.xml
<CustomField>
    <fullName>Net_Payments_Last_180_Days__c</fullName>
    <description>The net amount of payments minus refunds over the last 180 days at the time the case was created</description>
    <label>Net Payments - Last 180 Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>