force-app/main/default/objects/Case/fields/New_Email_of_User__c.field-meta.xml
<CustomField>
    <fullName>New_Email_of_User__c</fullName>
    <description>The email address of the new user to be created</description>
    <inlineHelpText>Enter the email address of the requested new user</inlineHelpText>
    <label>New Email of User</label>
    <type>Email</type>
</CustomField>