force-app/main/default/objects/Case/fields/New_Name_of_User__c.field-meta.xml
<CustomField>
    <fullName>New_Name_of_User__c</fullName>
    <description>The first and last name of the new user to be created</description>
    <inlineHelpText>Enter the first and last name of the requested new user</inlineHelpText>
    <label>New Name of User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>