force-app/main/default/objects/Case/fields/New_Phone_of_User__c.field-meta.xml
<CustomField>
    <fullName>New_Phone_of_User__c</fullName>
    <description>The phone number of the new user to be created</description>
    <inlineHelpText>Enter the phone number of the requested new user</inlineHelpText>
    <label>New Phone of User</label>
    <type>Phone</type>
</CustomField>