force-app/main/default/objects/Case/fields/Original_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Original_Account_Owner__c</fullName>
    <label>Original Account Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>