force-app/main/default/objects/Case/fields/Original_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Payment_Amount__c</fullName>
    <label>Original Payment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>