force-app/main/default/objects/Case/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>