force-app/main/default/objects/Case/fields/Oversold_Services__c.field-meta.xml
<CustomField>
    <fullName>Oversold_Services__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the representative sell additional services the client didn&apos;t want/need?</description>
    <inlineHelpText>Did the representative sell additional services the client didn&apos;t want/need?</inlineHelpText>
    <label>Oversold Services</label>
    <type>Checkbox</type>
</CustomField>