force-app/main/default/objects/Case/fields/Payments_Last_180_days__c.field-meta.xml
<CustomField>
    <fullName>Payments_Last_180_days__c</fullName>
    <description>Sum of payments made in the last 180 days</description>
    <inlineHelpText>Sum of payments made in the last 180 days</inlineHelpText>
    <label>Payments - Last 180 days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>