force-app/main/default/objects/Case/fields/Payroll_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Cancellation_Reason__c</fullName>
    <label>Payroll Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Go to another payroll provider</fullName>
            </value>
            <value>
                <fullName>Not doing payroll</fullName>
            </value>
            <value>
                <fullName>Closed Business</fullName>
            </value>
            <value>
                <fullName>Doing Payroll on their own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>