force-app/main/default/objects/Case/fields/Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Complete__c</fullName>
    <label>Percent Complete (in VTO App)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>