force-app/main/default/objects/Case/fields/Portal_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Portal_Account_Owner__c</fullName>
    <formula>Account.PortalAccountOwner__r.FirstName &amp; &quot; &quot; &amp; Account.PortalAccountOwner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Account Owner</label>
    <type>Text</type>
</CustomField>