force-app/main/default/objects/Case/fields/Primary_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Primary_Cancellation_Reason__c</fullName>
    <label>Primary Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>Fulfillment</fullName>
            </value>
            <value>
                <fullName>Sales Experience</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>