force-app/main/default/objects/Case/fields/Professionalism_Issues__c.field-meta.xml
<CustomField>
    <fullName>Professionalism_Issues__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Professionalism Issues</label>
    <type>Checkbox</type>
</CustomField>